# seobi-backend

./: .gitignore  README.md  config.py  llm_tools.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  maintenance.md  question.md
.github/workflows/: main_seobi-backend.yml
app/: __init__.py  main.py  run_background.py
app/background/: __init__.py  executor.py  graph.py  queue.py  state.py
app/dao/: auto_task_dao.py  base.py  briefing_dao.py  insight_article_dao.py  interest_dao.py  message_dao.py  report_dao.py  schedule_dao.py  session_dao.py  user_dao.py
app/langgraph/: __init__.py  agent.py  executor.py  graph.py  llm_config.py  main.py  state.py  tools.py
app/models/: __init__.py  auto_task.py  auto_task_step.py  briefing.py  insight_article.py  interest.py  mcp_server.py  mcp_server_activation.py  message.py  report.py  schedule.py  session.py  user.py
app/routes/: __init__.py  auth.py  auto_task.py  briefing.py  general_agent.py  insight.py  mcp_server.py  mcp_server_activation.py  message.py  report.py  schedule.py  session.py  user.py
app/schemas/: auto_task_schema.py  background_schema.py  briefing_schema.py  insight_schema.py  message_schema.py  session_schema.py  user_schema.py
app/services/: auto_task_service.py  auto_task_sevice.py  background_serive.py  background_service.py  briefing_service.py  cleanup_service.py  insight_article_service.py  interest_service.py  ko_location_memo.py  message_service.py  prompts.py  report_service.py  schedule_service.py  session_service.py  user_memory_llm_service.py  user_service.py
app/utils/: agent_state_store.py  app_config.py  auth_middleware.py  auto_task_utils.py  json_utils.py  map.py  message_processor.py  openai_client.py  summarize_output.py  text_cleaner.py  time.py  time_utils.py
models/: mcp_server.py  mcp_server_activation.py  message.py  session.py  user.py
tests/: conftest.py  db_setup.py  test_daily_report_service.py  test_db_cleanup.py  test_db_setup.py
(+180 files in other folders)
