[project]
name = "seobi-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "flask-jwt-extended>=4.7.1",
    "flask-migrate>=4.1.0",
    "flask-restx>=1.3.0",
    "flask-sqlalchemy>=3.1.1",
    "google-auth>=2.40.1",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "gunicorn>=23.0.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.61",
    "langchain-experimental>=0.3.4",
    "langchain-google-community>=2.0.7",
    "langchain-openai>=0.3.17",
    "langgraph>=0.4.5",
    "openai>=1.79.0",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-ordering>=0.6",
    "python-dotenv>=1.1.0",
    "redis>=6.2.0",
    "sqlalchemy-utils>=0.41.2",
    "tavily-python>=0.7.2",
    "tzdata>=2025.2",
]
